2016-03-26  Andy Buckley  <andy.buckley@cern.ch>

	* Replace Boost lexical_cast and string algorithms. Only Boost
	assign remains, and that can be replaced with brace initialisers.

2016-03-25  Andy Buckley  <andy.buckley@cern.ch>

	* Start replacing Boost foreach and shared_ptr with C++11 features.

	* Add an EXAMPLE_SMEAR analysis.

	* Propagate identity and C++ dialect flags from Rivet to
	rivet-config and rivet-buildplugin.

	* Require C++11 support in Rivet compilation.

2016-03-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add basic forms of new SmearedJets and SmearedParticles
	projections, and some standard efficiency and smearing functions
	in Rivet/Tools/SmearingFunctions.hh

	* Add (abs)charge(3) methods and functions for Particle objects.

2016-03-12  Andy Buckley  <andy.buckley@cern.ch>

	* Allow multi-line major tick labels on make-plots linear x and y
	axes. Linebreaks are indicated by \n in the .dat file.

2016-03-09  Andy Buckley  <andy.buckley@cern.ch>

	* Release 2.4.1

2016-03-03  Andy Buckley  <andy.buckley@cern.ch>

	* Add a --nskip flag to the rivet command-line tool, to allow
	processing to begin in the middle of an event file (useful for
	batched processing of large files, in combination with --nevts)

	* Allow specifying an alias name by which an analysis can be
	loaded, to allow migration from SPIRES to Inspire ID numberings.

2016-03-03  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add ATLAS 7 TeV event shapes in Z+jets analysis (ATLAS_2016_I1424838)

2016-02-29  Andy Buckley  <andy.buckley@cern.ch>

	* Update make-plots to use multiprocessing rather than threading.

	* Add FastJets::trimJet method, thanks to James Monk for the
	suggestion and patch.

	* Add new preferred name PID::charge3 in place of
	PID::threeCharge, and also convenience PID::abscharge and
	PID::abscharge3 functions -- all derived from changes in external
	HEPUtils.

	* Add analyze(const GenEvent*) and analysis(string&) methods to